--- a/app/src/main/res/layout/view_holder_notification.xml
+++ b/app/src/main/res/layout/view_holder_notification.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_notification"
+    android:layout_marginEnd="72dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginBottom="10dp"
+    android:paddingStart="12dp"
+    android:paddingEnd="16dp">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_package"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="25dp"
         android:text="Package: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +23,6 @@
         android:id="@+id/tv_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="Message: "
