--- a/app/src/main/res/layout/fragment_notifications_list.xml
+++ b/app/src/main/res/layout/fragment_notifications_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
@@ -11,9 +10,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/view_holder_notification"
-        >
-    </androidx.recyclerview.widget.RecyclerView>
+        tools:listitem="@layout/view_holder_notification" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_refresh"
@@ -21,7 +18,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="50dp">
+        android:layout_margin="50dp"
+        tools:text="@string/stop_listening">
 
     </com.google.android.material.button.MaterialButton>
 </androidx.constraintlayout.widget.ConstraintLayout>
