--- a/app/src/main/res/layout/view_holder_notification.xml
+++ b/app/src/main/res/layout/view_holder_notification.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/bg_notification"
     android:layout_marginEnd="72dp"
     android:layout_marginStart="16dp"
-    android:layout_marginBottom="10dp"
+    android:layout_marginBottom="5dp"
     android:paddingStart="12dp"
     android:paddingEnd="16dp">
 
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Package: "
+        android:text="@string/package_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        android:text="Message: "
+        android:text="@string/notification_text_example"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_package" />
